# AGI

./: .gitignore  .pre-commit-config.yaml  AGI.md  AGIHELP.md  AIDE PIPELINE DE VALIDATION.txt  Dockerfile  Instructions continuation agi et eve.txt  RAPPORT_AUDIT_AVANCE.txt  RAPPORT_CRITIQUE_RESTANT.txt  RAPPORT_DE_REFERENCE_AGI_EVE.txt  README.md  agi-eve.code-workspace  agi-health-check.sh  agi_compliance_checker.py  analyze_eve_ecosystem.sh  analyze_interconnections.py  audit_agi_conforme.sh  auto_audit_report.txt  check_pr_status.sh  check_todays_workflows.sh  check_workflow_results.sh  complete_eve_agi_fusion.sh  constitutional-governance.yml  constitutional_monitor.sh  deploy_edcc.sh  diagnose_workflows.sh  discovery_script.sh  ecosystem_analysis.txt  emergency_unblock.sh  fichier-de-test.txt  fix_critical_workflow_issues.sh  github_integration.py  github_issue_creator.py  iaGOD.json  mcp_agi_server.py  mise au point workflows.txt  mkdocs.yml  pr_priority_plan.txt  preuve_erreur_syntaxe.py  progress_monitor.sh  (+16 more)
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  constitutional_violation.yml  feature_request.yml  new_directive.yml  security_bug.yml
.github/neuron_states/: neuron_001.json
.github/scripts/: audit_documentation.py  audit_lignes.py  audit_planuml.py  audit_securite.py  auditeur_solution.py  chercheur.py  chercheur_solution.py  concierge_corrector.py  concierge_modules.py  concierge_reporter.py  creation_issues.py  fusion_analyzer.py  gestionnaire_issues.py  nettoyeur_format_csv.py  nettoyeur_format_markdown.py  nettoyeur_format_statut.py  orchestrateur.py  ouvrier_calculateur_doc.py  ouvrier_compteur.py  ouvrier_conseiller.py  ouvrier_extracteur_doc.py  ouvrier_juge.py  ouvrier_rapporteur.py  ouvrier_statisticien.py  progress_visualizer.py  qualiticien_validation_artefact.py  qualiticien_validation_schema.py  quasi_neuron_logic.py  run_audit.py  sauvegarde_rapports.py  syntax_verifier.py  travailleur_archiveur_zip.py  travailleur_ast_parser.py  travailleur_git_historien.py  travailleur_github_poster.py  travailleur_regex_applicateur.py  travailleur_scan_fichiers.py
.github/workflows/: 00-maitre.yml  01-orchestre-fixed.yml  01-orchestre.yml  02-loi-documentation.yml  02-loi-lignes.yml  02-loi-securite.yml  03-loi-securite.yml  04-01-auditeur-schema.yml  04-01-chercheur-comm-artefact.yml  04-01-doc-extracteur.yml  04-01-issues-collecteur.yml  04-01-lignes-compteur.yml  04-01-planuml-comparateur.yml  04-01-sauvegarde-collecteur.yml  04-01-securite-chercheur.yml  04-02-auditeur-securite.yml  04-02-chercheur-comm-check.yml  04-02-doc-calculateur.yml  04-02-issues-redacteur.yml  04-02-lignes-juge.yml  04-02-securite-trieur.yml  04-03-auditeur-simulation.yml  04-03-chercheur-comm-commentaire.yml  04-03-lignes-statisticien.yml  04-04-auditeur-cout.yml  04-04-chercheur-comm-dispatch.yml  04-04-lignes-rapporteur.yml  04-05-auditeur-plan.yml  04-05-chercheur-comm-pr.yml  04-05-lignes-conseiller.yml  04-06-chercheur-analyse-log.yml  04-07-chercheur-analyse-kb.yml  04-08-chercheur-analyse-simu.yml  04-loi-documentation.yml  (+188 more)
Enqueteworkflows/: README.md  surveiller_workflows.sh
PlanUML/: AGI_Architecture_Enhanced.puml  AGI_Metrics_Dashboardmarche pas.puml  AGI_Project_Architecture.puml  AGI_Project_Architecture_v4  AGI_State_Diagrammarche pas.puml  AGI_Workflow_Sequence.puml  Feuille_de_Route_AGI_Consciente.puml  architecture_agi_v3.puml  architecture_interactive_fixed.puml
agi_project/: README.md
backup_old_files/: project_initializer.py  python_generator.py  report_parser.py  structure_generator.py
backup_workflows_20250920_105228/: code-generation-validation.yml  codeql.yml  continuous-monitoring.yml  eve-cognitive-validation.yml  gaia-code-analysis.yml  git-integration-advanced.yml  logs-management.yml  master-orchestrator.yml  metrics.yml  monde-integration.yml  notifications.yml  publish-pypi.yml  quality-assurance.yml  test-eve-monitoring.yml  ui-interface-validation.yml  universe-simulation.yml
backup_workflows_critical_fix_20250921_115259/: basic-ci.yml  brain-core-monitoring.yml  code-generation-validation.yml  constitutional-governance.yml  cross-module-integration.yml  dev-automation-pipeline.yml  docker.yml  docs-deploy.yml  docs.yml  documentation-generation.yml  documentation.yml  emergence-monitor.yml  master-constitutional-corrector.yml  monitoring.yml  package-release.yml  performance-optimization.yml  system-health-dashboard.yml
compliance/: __init__.py  basic_auditor.py  constitution_loader.py  loader.py  models.py  orchestrator.py  reporter.py  rule_registry.py
eve/: test_bad_syntax.py
eve_project/: README.md
eve_project/development/monitoring/core/crew_a/: pyproject.toml
eve_project/development/monitoring/core/crew_a/src/eve_genesis___crew_a_construction_eveil/: crew.py  main.py
eve_project/development/monitoring/core/crew_a/src/eve_genesis___crew_a_construction_eveil/config/: agents.yaml  tasks.yaml
eve_project/development/monitoring/core/crew_a/src/eve_genesis___crew_a_construction_eveil/tools/: custom_tool.py
eve_project/development/monitoring/core/crew_a/test_eve_folder/: test.txt
scripts/: branch-helper.sh  emergency_helpers.py  emergency_refactor.py  fix_github_workflows.sh  install_physics_alternatives.sh
test-workflows/: analyze_workflows.py  run_tests.sh  test_agi_workflows.py  test_agi_workflows_fixed.py  test_real_workflows.py
tools/: command_server.py  dashboard_generator.py  smell_detector.py
(+427 files in other folders)
